title alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -21,25 +21,27 @@
 
 /*<------->*/
 
-body{
-  background-color:  rgb(247, 247, 247);
-}
-
 header{
   background-color: white;
 }
 
+body{
+  background-color:  rgb(247, 247, 247);
+}
+
 .title-container{
-  padding: 10px 30px;
+  height: 70px;
+  margin: 10px 10px;
   vertical-align: middle;
 }
 
-.image-container{
-  display: inline-block;
- }
-
 .text-container{
+  width: auto;
+  margin-bottom: 40px;
   display: inline-block;
+  vertical-align: middle;
+  font-size: 25px;
+  font-weight: 600;
 }
 
 .card{
@@ -126,7 +128,7 @@ ul{
 .sales{
   display: inline-block;
   font-size: 10px;
-  padding: 8px 8px;
+  padding: 8px 15px;
   border-radius: 12px;
   color: white;
 }
